# twitch_lynch

./: .gitignore  README.md  non_chats.py  pyproject.toml  scope.txt  tmp.py  twitch.txt  zz.py
chats/: reading.py  saving.py
stats/: saving.py
twitch_lynch/: blade_runner.py  blade_runner__chats.py  chats.py
twitch_lynch/chats/: reading.py
twitch_lynch/utils/: oauth.py
